# GenshinHDiffPatcher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_en.md  README_zh.md  main.cpp
.github/workflows/: debug.yml  release.yml
